--- a/injectable_generator/pubspec.yaml
+++ b/injectable_generator/pubspec.yaml
@@ -14,8 +14,8 @@ dependencies:
   analyzer: ">=6.4.1 <8.0.0"
   code_builder: ^4.10.1
   dart_style: ^3.0.1
-  injectable: ^2.5.0
-#      path: ../injectable
+  injectable:
+    path: ../injectable
   collection: ^1.17.1
   recase: ^4.1.0
   meta: ^1.12.0
