changes: - moved reused code from injectable_generator.dart - added new builder (InjectableHolisticBuilder) that generates json file with dependencies from each package referenced in annotated library - added logic in injectable_config_generator.dart to adapt to chosen json builder

--- a/injectable_generator/build.yaml
+++ b/injectable_generator/build.yaml
@@ -1,20 +1,21 @@
 builders:
-#  injectable_builder:
-#    import: "package:injectable_generator/builder.dart"
-#    builder_factories: ["injectableBuilder"]
-#    build_extensions: { ".dart": [".injectable.json"] }
-#    auto_apply: dependents
-#    runs_before: ["injectable_generator|injectable_config_builder"]
-#    build_to: cache
-#  injectable_config_builder:
-#    import: "package:injectable_generator/builder.dart"
-#    builder_factories: ["injectableConfigBuilder"]
-#    build_extensions: { ".dart": [".config.dart",".module.dart"] }
-#    auto_apply: dependents
-#    build_to: source
-  injectable_package_deps_builder:
+  injectable_builder:
     import: "package:injectable_generator/builder.dart"
-    builder_factories: [ "injectablePackageDepsBuilder" ]
-    build_extensions: { ".dart": [ ".packdeps.dart" ] }
+    builder_factories: ["injectableBuilder"]
+    build_extensions: { ".dart": [".injectable.json"] }
+    auto_apply: dependents
+    runs_before: ["injectable_generator|injectable_config_builder"]
+    build_to: cache
+  injectable_holistic_builder:
+    import: "package:injectable_generator/builder.dart"
+    builder_factories: [ "injectableHolisticBuilder" ]
+    build_extensions: { ".dart": [ ".injectable_holistic.json" ] }
+    auto_apply: none
+    runs_before: ["injectable_generator|injectable_config_builder"]
+    build_to: cache
+  injectable_config_builder:
+    import: "package:injectable_generator/builder.dart"
+    builder_factories: ["injectableConfigBuilder"]
+    build_extensions: { ".dart": [".config.dart",".module.dart"] }
     auto_apply: dependents
     build_to: source
